feat: users-per-month stats [HOS-143] (#67)
